FAIRPC-29: removed profiling