@@ -6,7 +6,6 @@ import io.fairspace.saturn.config.ViewsConfig.ColumnType;
 import io.fairspace.saturn.config.ViewsConfig.View;
 import io.fairspace.saturn.services.search.FileSearchRequest;
 import io.fairspace.saturn.services.search.SearchResultDTO;
-import io.fairspace.saturn.util.Profiler;
 import io.fairspace.saturn.vocabulary.FS;
 import lombok.SneakyThrows;
 import lombok.extern.slf4j.Slf4j;
@@ -49,8 +48,6 @@ public class ViewStoreReader implements AutoCloseable {
     final Config.Search searchConfig;
     final ViewStoreClient.ViewStoreConfiguration configuration;
     final Connection connection;
-
-    final int MAX_JOIN_ITEMS = 50;
 
     // TODO: in whole class, use StringBuilder instead of String concats
     public ViewStoreReader(Config.Search searchConfig, ViewStoreClientFactory viewStoreClientFactory) throws SQLException {
@@ -301,7 +298,7 @@ public class ViewStoreReader implements AutoCloseable {
                             (subConstraints.isBlank() ? "" : " and " + subConstraints) +
                             ")";
                 })
-                .collect(Collectors.toList());
+                .toList();
         constraints = Stream.concat(
                         Stream.of(constraints),
                         subqueries.stream())
@@ -337,14 +334,7 @@ public class ViewStoreReader implements AutoCloseable {
         }
 
         // retrieve view rows with fields from the view table only (not of the Set type)
-        var rowsById = Profiler.profileAndExecute(() -> {
-                    try {
-                        return getViewRowsForNonSetType(viewConfig, filters, offset, limit);
-                    } catch (SQLException e) {
-                        throw new RuntimeException(e);
-                    }
-                },
-                "ViewStoreReader.getViewRowsForNonSetType()");
+        var rowsById = getViewRowsForNonSetType(viewConfig, filters, offset, limit);
 
         // TODO: with materialized or normal view we can retrieve all data in one go adding one more join in the query above
         // retrieve view rows with fields from table only (of the Set type only)
@@ -354,14 +344,7 @@ public class ViewStoreReader implements AutoCloseable {
                 .map(column -> column.name)
                 .toList();
         if (!valueSetProperties.isEmpty()) {
-            var viewRowsForSetType = Profiler.profileAndExecute(() -> {
-                        try {
-                            return getViewRowsForSetType(view, valueSetProperties, viewIds);
-                        } catch (SQLException e) {
-                            throw new RuntimeException(e);
-                        }
-                    },
-                    "ViewStoreReader.getViewRowsForSetType()");
+            var viewRowsForSetType = getViewRowsForSetType(view, valueSetProperties, viewIds);
             // merge the data from the view (for instance, Study) table and related tables (for instance, Study_TreatmentId)
             viewRowsForSetType.forEach((key, value) -> rowsById.get(key).merge(value));
         }
@@ -421,7 +404,7 @@ public class ViewStoreReader implements AutoCloseable {
         var rows = new ViewRowCollection();
 
         if (!ids.isEmpty()) {
-            try (var query = getJoinQuery(view,  joinedTable, ids);
+            try (var query = getJoinQuery(view, joinedTable, ids);
                  var result = query.executeQuery()) {
                 while (result.next()) {
                     var id = result.getString(viewIdColumn);
@@ -471,7 +454,7 @@ public class ViewStoreReader implements AutoCloseable {
     private PreparedStatement getJoinQuery(String view, Table joinedTable, Collection<String> ids) throws SQLException {
 
         var query = "select * from mv_%s_join_%s where %s = ANY(?::text[])"
-                        .formatted(view, joinedTable.name, idColumn(view).name);
+                .formatted(view, joinedTable.name, idColumn(view).name);
 
         var ps = connection.prepareStatement(query);
         var array = ps.getConnection().createArrayOf("text", ids.toArray());
@@ -535,35 +518,19 @@ public class ViewStoreReader implements AutoCloseable {
                 throw new IllegalArgumentException("View not supported: " + view);
             }
             // Fetch rows with columns from the view table
-            var rowsById = Profiler.profileAndExecute(() -> {
-                        try {
-                            return this.retrieveViewTableRows(view, filters, offset, limit);
-                        } catch (SQLException e) {
-                            throw new RuntimeException(e);
-                        }
-                    },
-                    "ViewStoreReader.retrieveViewTableRows()");
+            var rowsById = this.retrieveViewTableRows(view, filters, offset, limit);
 
             // Add items from join tables
             if (includeJoinedViews) {
                 for (var joinView : viewConfig.join) {
-                    var allJoinTableRows = Profiler.profileAndExecute(() -> {
-                                try {
-                                    return this.retrieveJoinTableRows(view, joinView, rowsById.keySet());
-                                } catch (SQLException e) {
-                                    throw new RuntimeException(e);
-                                }
-                            },
-                            "ViewStoreReader.retrieveJoinTableRows()");
-                    Profiler.profileAndExecute(() -> rowsById.forEach((id, row) -> addJoinTableRowsForRow(row, allJoinTableRows.getRowsForId(id))),
-                            "ViewStoreReader.addJoinTableRowsForRow(FOR-LOOP)");
-                    ;
+                    var allJoinTableRows = this.retrieveJoinTableRows(view, joinView, rowsById.keySet());
+                    rowsById.forEach((id, row) -> addJoinTableRowsForRow(row, allJoinTableRows.getRowsForId(id)));
                 }
             }
             return rowsById.values().stream()
                     .map(ViewRow::getRawData)
                     .toList();
-        } catch (RuntimeException e) {
+        } catch (SQLException e) {
             throw new RuntimeException("Error retrieving page rows", e);
         }
     }
@@ -592,7 +559,7 @@ public class ViewStoreReader implements AutoCloseable {
 
         var searchString = "%" + escapeLikeString(request.getQuery().toLowerCase()) + "%";
 
-        ArrayList<String> values = new ArrayList<String>();
+        var values = new ArrayList<String>();
         values.add(searchString);
         values.add(searchString);
         values.addAll(userCollections);
